# learning-vault

./: .gitignore  Another Note.md  First Note.md  readme.md.md
.obsidian/: graph.json  workspace.json
Git/: readme.md
Git/Command References/: git add.md  git branch.md  git checkout -b.md  git clean.md  git commit --amend.md  git commit.md  git fetch.md  git init.md  git pull.md  git rebase.md  git reset.md  git restore.md  git revert.md  git status.md  git switch  -c.md  git switch.md  git-add.md  git-branch.md  git-checkout-b.md  git-clean.md  git-reset-soft.md  git-restore.md
Git/Exercises/: 001 - Create a new repository & connect it to a remote branch.md  001 -- Let's create a new repository & connect it to a remote branch.md  002 - Create branch.md  002 - Create new branches.md  002 - Merging branch.md  E001 - Create a new repository & connect it to a remote branch.md  E002 - Create branch.md  E002 - Merging branch.md  E002 - Rebase.md  E002a - Create branch.md  E002b - Merging branch.md  E002c - Rebase.md  E002d - Conflict.md  E003a - Stashing.md  E003b - Cherry-picking.md  (+14 more)
Git/Exercises/E007 - CI_CD and Quality Gates/: README.md  coverage.xml  pyproject.toml  requirements.txt
Git/Exercises/E007 - CI_CD and Quality Gates/hooks/: pre-commit
Git/Exercises/E007 - CI_CD and Quality Gates/scripts/: format.sh  install_hook.sh
Git/Exercises/E007 - CI_CD and Quality Gates/src/apps/: calculator_private.py
Git/Exercises/E007 - CI_CD and Quality Gates/src/apps.egg-info/: SOURCES.txt
Git/Exercises/E007 - CI_CD and Quality Gates/tests/: test_calculate.py
(+50 files in other folders)
